fixed grid box padding to better align content

--- a/css/theme.css
+++ b/css/theme.css
@@ -24,6 +24,12 @@
         color: #fff;
     }
 
+    /* JAGS CONFIG
+    ------------------------------------------*/
+    /* Box padding and margin */
+    .grid_box {
+      padding: 0;
+    }
 
     /* UTILS
     ------------------------------------------------------------------------------------*/
@@ -1837,7 +1843,14 @@
 /*--------------------------------------------------------------------------------
     Mobile (large/landscape) and up
 --------------------------------------------------------------------------------*/
-@media only screen and (min-width: 31em) {
+@media only screen and (min-width: 30.25em) {
+
+    /* JAGS CONFIG
+    ------------------------------------------*/
+    /* Box padding and margin */
+    .grid_box {
+      padding: 0;
+    }
 
     /* COMPONENTS
     ------------------------------------------------------------------------------------*/
@@ -1883,6 +1896,12 @@
         font: 100%/1.375 "Montserrat", Arial, "Helvetica Neue", Helvetica, sans-serif;
     }
 
+    /* JAGS CONFIG
+    ------------------------------------------*/
+    /* Box padding and margin */
+    .grid_box {
+        padding: 0;
+    }
 
     /* UTILS
     ------------------------------------------------------------------------------------*/
@@ -2258,6 +2277,12 @@
         font: 100%/1.375 "Montserrat", Arial, "Helvetica Neue", Helvetica, sans-serif;
     }
 
+    /* JAGS CONFIG
+    ------------------------------------------*/
+    /* Box padding and margin */
+    .grid_box {
+      padding: 0;
+    }
 
     /* UTILS
     ------------------------------------------------------------------------------------*/
